message Timeval {
	optional int64 sec = 1;
	optional int64 usec = 2;
};

message MerlinHeader {
	required uint64 sig = 1 [default = 0x005456454e4c524d]; // "MRLNEVT\0"
	optional int32 protocol= 2 [default = 2];
	optional bool nonet = 3; //XXX: Perhaps make this a bitmask, called flags?
	optional int32 selection = 4;
	optional Timeval sent = 5;

};
